--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "fungifinder",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
+  "main": "src/server/server.js",
   "type": "module",
   "scripts": {
-    "start": "browserify script.js -o bundle.js && serve ."
+    "start": "node src/server/server.js & browserify src/client/script.js -o public/js/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/halatinn97/fungiFinder#readme",
   "dependencies": {
     "browserify": "^17.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6"
   }
